--- a/contents/accessible.tex
+++ b/contents/accessible.tex
@@ -1,12 +1,12 @@
 \newpage
 \section{Accessible}
 
-Los datos se consideran accesibles por el usuario cuando este no necesita realizar un esfuerzo desmesurado para
-poder obtenerlos, entenderlos y usarlos, es decir, aplicarlos a su situacion particular. Para lograr estos objetivos,
-es necesario que el usuario pueda acceder a ellos de una manera que le resulte familiar y en un lenguage y nomenclatura
-que pueda entender.\\ 
+The data is considered accessible by the user when he does not need to make an excessive effort to
+to be able to obtain them, understand them and use them, that is, apply them to their particular situation. To achieve these objectives,
+it is necessary that the user can access them in a way that is familiar and in a language and nomenclature
+he can understand.\\ 
 
-En este apartado veremos si es posible el acceso a los datos por un usuario medio y como optimizar la accesibilidad.
+In this section we will see if it is possible to access data by an average user and how to optimize accessibility.
 
 \input{contents/accessible/available.tex}
 \input{contents/accessible/knowAbout.tex}
