--- a/contents/accessible/knowAbout.tex
+++ b/contents/accessible/knowAbout.tex
@@ -1,29 +1,30 @@
 \subsection{Know about}
 
-El usuario necesitara saber que tiene este recurso y puede utilizarlo ya que aunque optimicemos la represantacion del 
-conjunto de datos y lo ofrezcamos a los usuarios, este no sera util si los usuarios no son conscientes de que existe.
-\subsubsection{How to solve it} 
-La mejor manera es publicitando el producto en los medios y entorno adecuado.
-\subsubsection{How we solve it. Aire Guru} 
-Nuestra herramienta esta implementada para la ciudad de Malaga, por lo que actualmente se esta trabajando para darla a 
-conocer en esta ciudad.
-De momento esta disponible en el portal de datos abiertos en la pestana de aplicaciones\footnote{\url{https://datosabiertos.malaga.eu/aplicaciones}}\\
-Participo en el primer concurso de reutilizacion datos abiertos organizado por el Ayuntamiento de Malaga \footnote{\url{https://tinyurl.com/yx9wzutj}}
-quedando finalista en la categoria de pagina web.
+The user will need to know that he has this resource and can use it because although we optimize the represantation of the
+data set and we offer it to users, this will not be useful if users are not aware that it exists.
 
-aireGuruFinalist
+\subsubsection{How to solve it} 
+The best way is to advertise the product in the right environment and environment.
+\subsubsection{How we solve it. Aire Guru} 
+Our tool is implemented for the city of Malaga, so we are currently working to give it to
+know in this city.
+It is currently available in the open data portal in the app tab \footnote {\url {https://datosabiertos.malaga.eu/aplicaciones}} \\
+Participated in the first open data reuse contest organized by the Malaga City Council \footnote {\url {https://tinyurl.com/yx9wzutj}}
+being finalist in the category of web page.
+
 
 \begin{figure}[ht]
     \centering
-   \subfigure[Publicidad en el portal de datos abiertos de Malaga]{ \centering \includegraphics[width=6cm]{aireGuruFinalist}}
+   \subfigure[Advertising in the open data portal of Málaga]{ \centering \includegraphics[width=6cm]{aireGuruFinalist}}
    \hfill
    \subfigure[Finalist]{ \centering \includegraphics[width=5cm]{aireGuruFinalistCertificate}}
  
-    \caption{I Concurso de reutilizacion de datos abiertos. Ayuntamiento de Malaga}
+    \caption{I Contest of reuse of open data. Malaga's town hall}
     \end{figure}
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
-\crossed Deberia trabajarse mas en la publicidad de la plataforma y darla a conocer.  
+    \done It is currently published in the open data portal of the City of Malaga.
+\crossed More work should be done on the advertising of the platform and make it known.
 \end{itemize}
 \newpage
