--- a/contents/relevant.tex
+++ b/contents/relevant.tex
@@ -1,10 +1,11 @@
 \newpage
 \section{Relevant}
  
-Una buena representacion de los datos no consiste en presentarlos todos para que el usuario tenga la mayor informacion posible,
-consiste en mostrarle los datos necesarios para que pueda hacer una lectura directa de la situacion.\\
 
-En este apartado veremos el refinado de los datos para ofrecer al usuario una informacion relevante y de calidad.
+A good representation of the data does not consist in presenting all of them so that the user has as much information as possible,
+It consists in showing you the necessary data so that you can make a direct reading of the situation.\\
+
+In this section we will see the refining of the data to offer the user a relevant and quality information.
 
 \input{contents/relevant/model.tex}
 \input{contents/relevant/dataSetQuality.tex}
