--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -1,5 +1,13 @@
 \newpage
 \section{Compelling}
+The human being moves by the power of seduction, only if we feel attracted we will put our interest
+and effort to achieve it. This shows us that in the representations we make, we will have to worry
+about the effect that it transmits, the connection it has for others, more attraction, more level
+of involvement on the part of the user.\\
+
+
+In this section we will review the different points to implement a product that stays in mind
+of the user and this is irresistibly attracted to use it.
 \input{contents/compelling/mission.tex}
 \input{contents/compelling/product.tex}
 \input{contents/compelling/advantage.tex}
